fixed: resolve backdrop blur flickering issue on transparent button in Firefox

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -4,7 +4,8 @@
   --base-neutral-color: #9ca3af;
 }
 
-body {
+body,
+option {
   font-family: Arial, Helvetica, sans-serif;
   background: var(--bg-color);
   color: var(--text-color);
